--- a/app/src/main/res/layout/events_custom_layout.xml
+++ b/app/src/main/res/layout/events_custom_layout.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="120dp"
+    android:layout_height="130dp"
     android:layout_margin="8dp"
     android:elevation="12dp"
     android:padding="16dp">
@@ -11,63 +13,83 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center">
 
-        <ImageView
-            android:id="@+id/eventImageView"
-            android:layout_width="180dp"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardViewEventImage"
+            android:layout_width="120dp"
             android:layout_height="110dp"
-            android:layout_marginStart="6dp"
-            android:layout_alignParentStart="true"
-            android:src="@drawable/eel_event_image"
-            android:scaleType="centerCrop" />
+            android:layout_margin="6dp"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="10dp">
+
+            <ImageView
+                android:id="@+id/eventImageView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:src="@drawable/eel_event_image" />
+        </androidx.cardview.widget.CardView>
 
         <RelativeLayout
             android:id="@+id/relContent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_toEndOf="@id/eventImageView"
-            android:layout_marginStart="16dp">
+            android:layout_marginStart="16dp"
+            android:layout_toEndOf="@id/cardViewEventImage">
 
             <TextView
                 android:id="@+id/eventNameTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="6dp"
+                android:layout_marginTop="6dp"
+                android:layout_marginEnd="6dp"
+                android:gravity="start"
                 android:text="Event Name"
-                android:textSize="18sp"
                 android:textColor="@color/black"
-                android:gravity="start" />
+                android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/locationTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/eventNameTextView"
+                android:layout_marginStart="6dp"
+                android:layout_marginEnd="6dp"
+                android:layout_marginBottom="6dp"
                 android:gravity="start"
                 android:text="Location" />
 
         </RelativeLayout>
 
-        <Button
-            android:id="@+id/addToCalendarButton"
-            android:layout_width="100dp"
-            android:textSize="10sp"
-            android:layout_marginTop="16dp"
-            android:layout_height="50dp"
+        <LinearLayout
+            android:id="@+id/linearButtons"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/relContent"
             android:layout_marginStart="8dp"
-            android:layout_toEndOf="@+id/eventImageView"
-            android:text="Add to Calendar"
-            android:layout_below="@+id/relContent"/>
-
-        <Button
-            android:id="@+id/btnViewEventDetails"
-            android:layout_width="100dp"
-            android:textSize="10sp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
-            android:layout_height="50dp"
             android:layout_marginEnd="8dp"
-            android:layout_toEndOf="@+id/addToCalendarButton"
-            android:text="View Event"
-            android:layout_below="@+id/relContent"/>
+            android:layout_toEndOf="@+id/cardViewEventImage"
+            android:gravity="bottom|end"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/addToCalendarButton"
+                android:layout_width="120dp"
+                android:layout_height="40dp"
+                android:backgroundTint="@color/editTextBlue"
+                android:text="Add"
+                android:textSize="10sp"
+                tools:ignore="TouchTargetSizeCheck" />
+
+            <Button
+                android:id="@+id/btnViewEventDetails"
+                android:layout_width="120dp"
+                android:layout_height="40dp"
+                android:backgroundTint="@color/editTextBlue"
+                android:text="View Event"
+                android:textSize="10sp"
+                tools:ignore="TouchTargetSizeCheck" />
+        </LinearLayout>
 
     </RelativeLayout>
 
