--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,11 +51,11 @@
 
                 <TextView
                     android:id="@+id/tvHomeHeading"
-                    android:layout_width="280dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="60dp"
-                    android:gravity="center|start"
                     android:layout_marginTop="12dp"
+                    android:gravity="center|start"
                     android:text="@string/HomeHeading"
                     android:textColor="@color/white"
                     android:textSize="30sp"
@@ -63,7 +63,7 @@
 
                 <TextView
                     android:id="@+id/tvSubHeading"
-                    android:layout_width="280dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginStart="60dp"
                     android:gravity="center|start"
