--- a/app/src/main/res/layout/events_custom_layout.xml
+++ b/app/src/main/res/layout/events_custom_layout.xml
@@ -16,8 +16,11 @@
         <androidx.cardview.widget.CardView
             android:id="@+id/cardViewEventImage"
             android:layout_width="120dp"
-            android:layout_height="110dp"
-            android:layout_margin="6dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="6dp"
+            android:layout_marginTop="6dp"
+            android:layout_marginEnd="6dp"
+            android:layout_marginBottom="6dp"
             app:cardCornerRadius="8dp"
             app:cardElevation="10dp">
 
@@ -33,14 +36,14 @@
             android:id="@+id/relContent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="8dp"
             android:layout_toEndOf="@id/cardViewEventImage">
 
             <TextView
                 android:id="@+id/eventNameTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="6dp"
+                android:layout_centerVertical="true"
                 android:layout_marginTop="6dp"
                 android:layout_marginEnd="6dp"
                 android:gravity="start"
@@ -49,45 +52,59 @@
                 android:textSize="18sp" />
 
             <TextView
-                android:id="@+id/locationTextView"
+                android:id="@+id/timeTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/eventNameTextView"
-                android:layout_marginStart="6dp"
+                android:layout_alignParentRight="false"
+                android:layout_centerHorizontal="false"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="50dp"
                 android:layout_marginEnd="6dp"
                 android:layout_marginBottom="6dp"
-                android:gravity="start"
-                android:text="Location" />
+                android:layout_toRightOf="@id/eventNameTextView"
+                android:gravity="right"
+                android:text="Time"
+                app:drawableLeftCompat="@drawable/baseline_access_time_24" />
 
         </RelativeLayout>
 
         <LinearLayout
             android:id="@+id/linearButtons"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_below="@+id/relContent"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_toEndOf="@+id/cardViewEventImage"
-            android:gravity="bottom|end"
-            android:orientation="vertical">
+            android:layout_toRightOf="@id/cardViewEventImage"
+            android:gravity="bottom|end">
 
             <Button
                 android:id="@+id/addToCalendarButton"
-                android:layout_width="120dp"
+                android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:backgroundTint="@color/editTextBlue"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1.2"
+                android:background="?android:attr/selectableItemBackground"
+                android:backgroundTint="@color/white"
                 android:text="Add"
+                android:textColor="@color/black"
                 android:textSize="10sp"
+                app:drawableLeftCompat="@drawable/baseline_calendar_month_24"
                 tools:ignore="TouchTargetSizeCheck" />
 
             <Button
                 android:id="@+id/btnViewEventDetails"
-                android:layout_width="120dp"
+                android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:backgroundTint="@color/editTextBlue"
+                android:layout_weight="1"
+                android:background="?android:attr/selectableItemBackground"
+                android:backgroundTint="@color/white"
                 android:text="View Event"
+                android:textColor="@color/black"
                 android:textSize="10sp"
+                app:drawableLeftCompat="@drawable/baseline_search_24"
                 tools:ignore="TouchTargetSizeCheck" />
         </LinearLayout>
 
