--- a/app/src/main/res/layout/events_custom_layout.xml
+++ b/app/src/main/res/layout/events_custom_layout.xml
@@ -56,13 +56,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="false"
                 android:layout_centerHorizontal="false"
                 android:layout_centerVertical="true"
+                android:gravity="center"
                 android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
+                android:textSize="12sp"
+                android:textColor="@color/black"
+                android:layout_marginEnd="16dp"
                 android:layout_marginBottom="6dp"
                 android:foregroundGravity="right"
+                android:drawablePadding="8dp"
                 android:text="Time"
                 app:drawableStartCompat="@drawable/baseline_access_time_24" />
 
@@ -84,7 +87,7 @@
                 android:id="@+id/addToCalendarButton"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginEnd="10dp"
                 android:layout_weight="1.2"
                 android:backgroundTint="#DCDCDC"
                 android:text="Add"
