--- a/app/src/main/res/layout/business_detail.xml
+++ b/app/src/main/res/layout/business_detail.xml
@@ -62,6 +62,8 @@
         android:layout_below="@id/titleTextViewBusiness"
         android:layout_marginTop="8dp"
         android:textSize="16sp"
+        android:autoLink="email"
+        style="@style/TextViewLinkTheme"
         android:drawableStart="@drawable/mail"
         android:drawablePadding="8dp"
         android:gravity="start"
@@ -75,6 +77,8 @@
         android:layout_below="@id/tvEmail"
         android:layout_marginTop="8dp"
         android:textSize="16sp"
+        style="@style/TextViewLinkTheme"
+        android:autoLink="web"
         android:drawableStart="@drawable/website"
         android:drawablePadding="8dp"
         android:gravity="start"
@@ -87,6 +91,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/tvWebsite"
+        style="@style/TextViewLinkTheme"
         android:layout_marginTop="8dp"
         android:textSize="16sp"
         android:visibility="gone"
@@ -122,7 +127,7 @@
         android:id="@+id/descriptionTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
+        android:paddingBottom="16dp"
         android:layout_marginTop="8dp"
         android:textSize="16sp"
         android:text="Stuff about our shop" />
