--- a/app/src/main/res/layout/event_detail.xml
+++ b/app/src/main/res/layout/event_detail.xml
@@ -176,7 +176,7 @@
             android:id="@+id/descriptionTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
+            android:paddingBottom="16dp"
             android:layout_marginTop="8dp"
             android:text="Stuff about our shop"
             android:textSize="16sp" />
