--- a/app/src/main/res/layout/activity_activities.xml
+++ b/app/src/main/res/layout/activity_activities.xml
@@ -86,6 +86,15 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:padding="8dp">
+                        <ImageButton
+                            android:id="@+id/btnSearch"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_centerVertical="true"
+                            android:background="@android:color/transparent"
+                            android:contentDescription="@string/About"
+                            android:src="@drawable/baseline_search_24"
+                            tools:ignore="TouchTargetSizeCheck" />
 
                         <EditText
                             android:id="@+id/etSearch"
@@ -94,6 +103,7 @@
                             android:autofillHints=""
                             android:background="@android:color/transparent"
                             android:gravity="center"
+                            android:layout_toEndOf="@+id/btnSearch"
                             android:hint="@string/searchBar"
                             android:inputType="text"
                             android:maxLines="1"
@@ -103,17 +113,7 @@
                             android:theme="@style/EditTextTheme"
                             tools:ignore="TouchTargetSizeCheck" />
 
-                        <ImageButton
-                            android:id="@+id/btnSearch"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_alignParentEnd="true"
-                            android:layout_centerVertical="true"
-                            android:layout_toEndOf="@+id/etSearch"
-                            android:background="@android:color/transparent"
-                            android:contentDescription="@string/About"
-                            android:src="@drawable/baseline_search_24"
-                            tools:ignore="TouchTargetSizeCheck" />
+
 
                     </RelativeLayout>
                 </androidx.cardview.widget.CardView>
