--- a/app/src/main/res/layout/activity_businesses.xml
+++ b/app/src/main/res/layout/activity_businesses.xml
@@ -86,6 +86,16 @@
                         android:layout_height="wrap_content"
                         android:padding="8dp">
 
+                        <ImageButton
+                            android:id="@+id/btnSearch"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_centerVertical="true"
+                            android:background="@android:color/transparent"
+                            android:contentDescription="@string/About"
+                            android:src="@drawable/baseline_search_24"
+                            tools:ignore="TouchTargetSizeCheck" />
+
                         <EditText
                             android:id="@+id/etSearch"
                             android:layout_width="300dp"
@@ -95,6 +105,7 @@
                             android:gravity="center"
                             android:hint="@string/searchBar"
                             android:inputType="text"
+                            android:layout_toEndOf="@+id/btnSearch"
                             android:maxLines="1"
                             android:textAlignment="center"
                             android:textColor="@color/black"
@@ -102,17 +113,6 @@
                             android:theme="@style/EditTextTheme"
                             tools:ignore="TouchTargetSizeCheck" />
 
-                        <ImageButton
-                            android:id="@+id/btnSearch"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_alignParentEnd="true"
-                            android:layout_centerVertical="true"
-                            android:layout_toEndOf="@+id/etSearch"
-                            android:background="@android:color/transparent"
-                            android:contentDescription="@string/About"
-                            android:src="@drawable/baseline_search_24"
-                            tools:ignore="TouchTargetSizeCheck" />
 
                     </RelativeLayout>
                 </androidx.cardview.widget.CardView>
