--- a/app/src/main/res/layout/activity_stay.xml
+++ b/app/src/main/res/layout/activity_stay.xml
@@ -86,7 +86,15 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:padding="8dp">
-
+                            <ImageButton
+                                android:id="@+id/btnSearch"
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:layout_centerVertical="true"
+                                android:background="@android:color/transparent"
+                                android:contentDescription="@string/About"
+                                android:src="@drawable/baseline_search_24"
+                                tools:ignore="TouchTargetSizeCheck" />
                             <EditText
                                 android:id="@+id/etSearch"
                                 android:layout_width="300dp"
@@ -97,23 +105,14 @@
                                 android:hint="@string/searchBar"
                                 android:inputType="text"
                                 android:maxLines="1"
+                                android:layout_toEndOf="@+id/btnSearch"
                                 android:textAlignment="center"
                                 android:theme="@style/EditTextTheme"
                                 android:textColor="@color/black"
                                 android:textColorHint="@color/searchBarHint"
                                 tools:ignore="TouchTargetSizeCheck" />
 
-                            <ImageButton
-                                android:id="@+id/btnSearch"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:layout_alignParentEnd="true"
-                                android:layout_centerVertical="true"
-                                android:layout_toEndOf="@+id/etSearch"
-                                android:background="@android:color/transparent"
-                                android:contentDescription="@string/About"
-                                android:src="@drawable/baseline_search_24"
-                                tools:ignore="TouchTargetSizeCheck" />
+
 
                         </RelativeLayout>
                     </androidx.cardview.widget.CardView>
