--- a/app/src/main/res/layout/detail_activities.xml
+++ b/app/src/main/res/layout/detail_activities.xml
@@ -135,6 +135,8 @@
         android:layout_below="@id/lineAboveDescription"
         android:layout_marginTop="8dp"
         android:layout_marginStart="16dp"
+        android:textStyle="bold"
+        android:textColor="@color/black"
         android:textSize="20sp"
         android:text="Description" />
 
@@ -147,6 +149,7 @@
     <TextView
         android:id="@+id/descriptionTextView"
         android:layout_width="match_parent"
+        android:textColor="@color/black"
         android:layout_height="wrap_content"
         android:layout_below="@id/tvDescriptionHeading"
         android:layout_marginTop="8dp"
