--- a/app/src/main/res/layout/stay_detail.xml
+++ b/app/src/main/res/layout/stay_detail.xml
@@ -130,6 +130,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/lineAboveDescription"
         android:layout_marginTop="8dp"
+        android:textStyle="bold"
+        android:textColor="@color/black"
         android:textSize="20sp"
         android:text="Description" />
 
@@ -141,6 +143,7 @@
         android:id="@+id/descriptionTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/black"
         android:layout_marginTop="8dp"
         android:paddingBottom="16dp"
         android:textSize="16sp"
