--- a/app/src/main/res/layout/contact_layout.xml
+++ b/app/src/main/res/layout/contact_layout.xml
@@ -23,8 +23,9 @@
         android:layout_marginTop="16dp"
         android:text="wefwefefw"
         android:autoLink="map"
+        android:padding="8dp"
         android:textSize="16sp"
-        android:drawableStart="@drawable/location"/>
+        android:drawableStart="@drawable/baseline_location_on_24"/>
 
     <TextView
         android:id="@+id/tvEmail"
@@ -33,6 +34,7 @@
         android:layout_below="@id/tvLocation"
         android:text="wefwefefw"
         android:autoLink="email"
+        android:padding="8dp"
         style="@style/TextViewLinkTheme"
         android:layout_marginTop="8dp"
         android:textSize="16sp"
@@ -44,6 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/tvEmail"
         android:text="wefwefefw"
+        android:padding="8dp"
         android:autoLink="phone"
         style="@style/TextViewLinkTheme"
         android:layout_marginTop="8dp"
