--- a/app/src/main/res/layout/detail_activities.xml
+++ b/app/src/main/res/layout/detail_activities.xml
@@ -27,7 +27,7 @@
         android:layout_below="@+id/btnBack"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        app:cardBackgroundColor="@color/purple_200"
+        app:cardBackgroundColor="@color/white"
         app:cardElevation="20dp"
         app:cardCornerRadius="5dp">
 
