--- a/app/src/main/res/layout/stay_detail.xml
+++ b/app/src/main/res/layout/stay_detail.xml
@@ -26,7 +26,7 @@
         android:layout_height="200dp"
         android:layout_below="@+id/btnBack"
         android:layout_marginTop="16dp"
-        app:cardBackgroundColor="@color/purple_200"
+        app:cardBackgroundColor="@color/white"
         app:cardElevation="20dp"
         app:cardCornerRadius="5dp">
 
