--- a/app/src/main/res/layout/activity_businesses.xml
+++ b/app/src/main/res/layout/activity_businesses.xml
@@ -70,58 +70,80 @@
                 android:layout_height="match_parent"
                 android:layout_below="@+id/frameParentBusinesses">
 
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/cardViewSearch"
+                <LinearLayout
+                    android:id="@+id/linearFilterSearch"
                     android:layout_width="match_parent"
-                    android:layout_height="48dp"
-                    android:layout_marginStart="25dp"
+                    android:layout_height="55dp"
+                    android:layout_marginStart="8dp"
                     android:layout_marginTop="16dp"
-                    android:layout_marginEnd="25dp"
                     android:layout_marginBottom="16dp"
-                    app:cardCornerRadius="8dp"
-                    app:cardElevation="8dp">
+                    android:orientation="horizontal">
 
-                    <RelativeLayout
-                        android:layout_width="match_parent"
+                    <ImageButton
+                        android:id="@+id/btnFilter"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:padding="8dp">
+                        android:layout_gravity="center"
+                        android:layout_marginEnd="8dp"
+                        android:background="@android:color/transparent"
+                        android:contentDescription="@string/Experience"
+                        android:minWidth="48dp"
+                        android:minHeight="48dp"
+                        android:src="@drawable/baseline_filter_list_24" />
 
-                        <ImageButton
-                            android:id="@+id/btnSearch"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:layout_centerVertical="true"
-                            android:background="@android:color/transparent"
-                            android:contentDescription="@string/About"
-                            android:src="@drawable/baseline_search_24"
-                            tools:ignore="TouchTargetSizeCheck" />
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/cardViewSearch"
+                        android:layout_width="match_parent"
+                        android:layout_height="48dp"
+                        android:layout_marginEnd="8dp"
+                        app:cardCornerRadius="8dp"
+                        app:cardElevation="8dp">
 
-                        <EditText
-                            android:id="@+id/etSearch"
-                            android:layout_width="300dp"
-                            android:layout_height="match_parent"
-                            android:autofillHints=""
-                            android:background="@android:color/transparent"
-                            android:gravity="center"
-                            android:hint="@string/searchBar"
-                            android:inputType="text"
-                            android:layout_toEndOf="@+id/btnSearch"
-                            android:maxLines="1"
-                            android:textAlignment="center"
-                            android:textColor="@color/black"
-                            android:textColorHint="@color/searchBarHint"
-                            android:theme="@style/EditTextTheme"
-                            tools:ignore="TouchTargetSizeCheck" />
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="8dp"
+                            android:padding="8dp">
+
+                            <ImageButton
+                                android:id="@+id/btnSearch"
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:layout_centerVertical="true"
+                                android:background="@android:color/transparent"
+                                android:contentDescription="@string/About"
+                                android:src="@drawable/baseline_search_24"
+                                tools:ignore="TouchTargetSizeCheck" />
+
+                            <EditText
+                                android:id="@+id/etSearch"
+                                android:layout_width="300dp"
+                                android:layout_height="match_parent"
+                                android:layout_toEndOf="@+id/btnSearch"
+                                android:autofillHints=""
+                                android:background="@android:color/transparent"
+                                android:gravity="center"
+                                android:layout_marginEnd="8dp"
+                                android:hint="@string/searchBar"
+                                android:inputType="text"
+                                android:maxLines="1"
+                                android:textAlignment="center"
+                                android:textColor="@color/black"
+                                android:textColorHint="@color/searchBarHint"
+                                android:theme="@style/EditTextTheme"
+                                tools:ignore="TouchTargetSizeCheck" />
 
 
-                    </RelativeLayout>
-                </androidx.cardview.widget.CardView>
+                        </RelativeLayout>
+                    </androidx.cardview.widget.CardView>
+                </LinearLayout>
 
                 <ListView
                     android:id="@+id/businessListView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_below="@id/cardViewSearch"
+                    android:layout_marginTop="8dp"
+                    android:layout_below="@id/linearFilterSearch"
                     android:layout_centerInParent="true"
                     android:dividerHeight="1dp" />
             </RelativeLayout>
